tests/packaging-test/test_out/github.txt
error: git execution failed
 --> github\package.ctlm:3:45
  |
3 |     git water "github.com/jakubDoka/water" "v0.*.*"
  |                                             ------ info: invocation declared here
  |
  = info: executing git: ls-remote https://github.com/jakubDoka/water refs/tags/v0.*.*
  = info: output:
          fatal: repository 'https://github.com/jakubDoka/water' not found

error: git execution failed
 --> github\b\package.ctlm:3:39
  |
3 |     git "github.com/jakubDoka/water" "v0.*.*"
  |                                       ------ info: invocation declared here
  |
  = info: executing git: ls-remote https://github.com/jakubDoka/water refs/tags/v0.*.*
  = info: output:
          fatal: repository 'https://github.com/jakubDoka/water' not found

error: cannot find this package in manifest
 --> github\root.ctl:2:6
  |
2 |     "water"
  |      ^^^^^ invalid package prefix used here
  |
  = info: available packages: 'a', 'b', '.'

